# codex

./: .gitignore  Cargo.toml  Dockerfile  README.md  codex.db  config.toml  docker-compose.yml  targets.toml  verification-checklist.db  verification-ui.db
.github/: copilot-instructions.md
benches/: markdown_benchmarks.rs
crates/codex-desktop/: Cargo.toml
crates/codex-desktop/src/: main.rs  state.rs  ui.rs
crates/codex-desktop/tests/: ui_interaction.rs
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  BUILD.md  CANVAS_DATA_MODEL.md  CANVAS_INTEGRATION_PLAN.md  CODEX_OVERVIEW.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_TUI.md  DOCKER.md  FRONTMATTER_PLAN.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_TEST_COVERAGE.md  PLAN-desktop-sync-multiuser.md  PLUGIN_API.md  PLUGIN_ARCHITECTURE.md  PLUGIN_PARITY_ROADMAP.md  PLUGIN_UI_IMPLEMENTATION.md  PROPERTY_TYPES_SPEC.md  TAG_SYSTEM_SPEC.md  TASK_8.1_COMPLETION.md  TASK_9.2_COMPLETION.md  TASK_9_COMPLETION.md  TEMPLATES_SYSTEM.md  TEST_PLAN.md  UI_TEST_PLAN.md  USER_GUIDE.md  VUE_PORT_AND_API_PLAN.md  WEBKITGTK_COMPAT.md  auth_refactor_todo.md  notes.md  tauri_desktop_plan.md  unified_auth_plan.md
frontend/: create-admin.sh  index.html  inspect-selectors.js  inspect-selectors.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
logs/: codex.log.2026-04-10  obsidian-host.log.2026-03-12  obsidian-host.log.2026-04-07  obsidian-host.log.2026-04-10
scripts/: codex.py  deploy_tui.py  run_all_tests.py
tests/: api_integration_tests.rs  block_ref_tests.rs  commonmark_tests.rs  concurrent_operations_tests.rs  conflict_tests.rs  database_operations_tests.rs  embed_tests.rs  error_handling_tests.rs  file_crud_integration_tests.rs  frontmatter_tests.rs  link_display_tests.rs  (+9 more)
(+236 files in other folders)
