[workspace]
members = [
	"crates/obsidian-server",
	"crates/obsidian-types",
	"crates/obsidian-client",
]
default-members = ["crates/obsidian-server"]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic (reduces binary size by removing unwinding)
strip = true        # Strip symbols from binary

