[workspace]
members = [
	"crates/codex-server",
	"crates/codex-types",
	"crates/codex-client",
	"crates/codex-desktop",
	"crates/codex-tauri",
]
default-members = ["crates/codex-server"]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic (reduces binary size by removing unwinding)
strip = true        # Strip symbols from binary

