[package]
name = "codex-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "markdown", "image"] }
codex-client = { path = "../codex-client" }
codex-types = { path = "../codex-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
accesskit = "0.24.0"
iced_test = "0.14.0"
